start of conversion from php to jade

--- a/app/views/info.jade
+++ b/app/views/info.jade
@@ -1,12 +1,3 @@
-!!! 5
-html
-  head
-    meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    //
-       Bootstrap
-    link(href='css/bootstrap.min.css', rel='stylesheet', media='screen')
-    link(href='http://fonts.googleapis.com/css?family=Roboto:300', rel='stylesheet', type='text/css')
-    link(rel='stylesheet', type='text/css', href='mystyle.css')
     script
       function registerUser()
       {
@@ -99,7 +90,7 @@ html
                 option(value='restaurant') Restaurant
                 option(value='bar') Bar
           .credentials
-            span.header Busniness information
+            span.header Business information
             hr
             | Business Name:
             span.space
