--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -11,6 +11,7 @@ html(lang='en')
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
     script(src='https://code.jquery.com/jquery.js')
     script(src='js/bootstrap.min.js')
+    block head
   body
     .container
       block content
