--- a/app/views/login.jade
+++ b/app/views/login.jade
@@ -1,51 +1,63 @@
-#wrapper-login
-  .top
-    span.topBanner
-      h1.pageTitle I'm Bored
-  br
-  button#showr.start-button Click here to get started!
-  #login-input(style='display: none;')
-    form.login-form(name='login', action='')
-      | "" method="post"
-      .header
-        h1 I'm Bored
-        span.header Please login or register to get started!
-        hr
-      .login-credentials
-        input.login-box(type='text', name='user', placeholder='Username', title='Please provide your username')
-      .login-credentials
-        input.login-box(type='password', name='pwd', placeholder='Password', title='Please provide your password')
-      .forgot-login
-        a(href='', onclick='emailReset()') Forgot your username or password?
-      br
-      br
-      .login-footer
-        button#hidr.login-button(style='float: right;') Close
-        input.login-button(type='submit', name='submit', value='Login')
-        a.login-register(href='info.php') Register
-script
-  $(function() {
-  $( document ).tooltip({
-  show: 'bounce, slow',
-  });
-  });
-  function emailReset()
-  {
-  var x;
-  var username=prompt("Please provide your Username or E-mail address","Email/Username");
-  if (username!=null)
+extends layout
+
+block head
+  style
+    html, body{
+      width: 100% !important;
+      height: 100% !important;
+      padding: 0;
+      margin: 0;
+    }
+
+block content
+  #wrapper-login
+    .top
+      span.topBanner
+        h1.pageTitle I'm Bored
+    br
+    button#showr.start-button Click here to get started!
+    #login-input(style='display: none;')
+      form.login-form(name='login', action='')
+        | "" method="post"
+        .header
+          h1 I'm Bored
+          span.header Please login or register to get started!
+          hr
+        .login-credentials
+          input.login-box(type='text', name='user', placeholder='Username', title='Please provide your username')
+        .login-credentials
+          input.login-box(type='password', name='pwd', placeholder='Password', title='Please provide your password')
+        .forgot-login
+          a(href='', onclick='emailReset()') Forgot your username or password?
+        br
+        br
+        .login-footer
+          button#hidr.login-button(style='float: right;') Close
+          input.login-button(type='submit', name='submit', value='Login')
+          a.login-register(href='info.php') Register
+  script
+    $(function() {
+    $( document ).tooltip({
+    show: 'bounce, slow',
+    });
+    });
+    function emailReset()
     {
-  //alert("Thank you " + person + ", you should be receiving an e-mail shortly with instuctions on how to reset your password");
-  document.getElementById("demo").innerHTML=x;
-  }
-  }
-  $( "#showr" ).click(function() {
-  $( "#login-input" ).first().show(  function showNext() {
-  $( this ).next( "login-input" ).show( showNext );
-  $("#showr").html('Login or register!');
-  });
-  });
-    $( "#hidr" ).click(function() {
-    $( "#login-input" ).hide( 300 );
-  });
+    var x;
+    var username=prompt("Please provide your Username or E-mail address","Email/Username");
+    if (username!=null)
+      {
+    //alert("Thank you " + person + ", you should be receiving an e-mail shortly with instuctions on how to reset your password");
+    document.getElementById("demo").innerHTML=x;
+    }
+    }
+    $( "#showr" ).click(function() {
+    $( "#login-input" ).first().show(  function showNext() {
+    $( this ).next( "login-input" ).show( showNext );
+    $("#showr").html('Login or register!');
+    });
+    });
+      $( "#hidr" ).click(function() {
+      $( "#login-input" ).hide( 300 );
+    });
 
