fix toggle buttons

--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -10,7 +10,7 @@ html(lang='en')
     link(rel='stylesheet', type='text/css', href='/css/mystyle.css')
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
     script(src='https://code.jquery.com/jquery.js')
-    script(src='js/bootstrap.min.js')
+    script(src='/js/bootstrap.min.js')
     block head
   body
     .container
