fixed broken link

--- a/app/views/info.jade
+++ b/app/views/info.jade
@@ -285,4 +285,4 @@ block content
           textarea.specials.non-required(name='specials')
         .footer
           input.button(type='submit', name='submit', value='Register')
-          input.button(type='button', name='cancel', value='Cancel', style='margin-left: 15px;', onclick='top.location.href=\'login.php\';')
+          input.button(type='button', name='cancel', value='Cancel', style='margin-left: 15px;', onclick='top.location.href=\'/\';')
