successfully get venue when submitting JSON to server

--- a/app/views/info.jade
+++ b/app/views/info.jade
@@ -58,7 +58,7 @@ block content
         url: '/business/create',
         data: {
           name: $('input[name=business-name]').val(),
-          type: $('input[name=venue]').val(),
+          type: $('select[name=venue]').val(),
           phoneNumber: $('input[name=phone-number]').val(),
           description: $('textarea[name=description]').val(),
           deals: $('textarea[name=specials]').val(),
